# simpost

./: .coverage  .env.example  .gitignore  README.md  article_manager.py  feeds.json  pyproject.toml  quickstart.py  requirements-dev.txt  requirements.txt  setup.py  test_article_id.py  test_article_retrieval.py  test_facebook_posting.py  test_fake_verification.py  test_feeds.py  test_full_workflow.py  test_rewriting.py  test_storage.py  test_verification.py
.github/workflows/: tests.yml
logs/: EVs_Australia.md  Gaza_News.md  Red_Bull_F1.md
simpost/: __init__.py  __main__.py  fbtoken.py  multi_feed_news_automation.py  utils.py
tests/: conftest.py
tests/fixtures/: sample_feeds.json  sample_rss_response.xml
tests/integration/: test_workflow.py
tests/unit/: test_article_id.py  test_feed_retrieval.py  test_storage.py
